--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ authors = [
     {name = "david",email = "david.marivat-larose@orange.fr"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.12"
 dependencies = [
-    "numpy (>=1.24,<2.0)",
+    "numpy (>=1.24,<2.2)",
     "pandas (>=2.2.3,<3.0.0)",
     "scikit-learn (>=1.6.1,<2.0.0)",
     "matplotlib (>=3.10.3,<4.0.0)",
@@ -22,7 +22,13 @@ dependencies = [
     "gensim (>=4.3.3,<5.0.0)",
     "transformers (>=4.52.4,<5.0.0)",
     "torch (>=2.7.0,<3.0.0)",
-    "tensorflow-hub (>=0.16.1,<0.17.0)"
+    "tensorflow-hub (>=0.16.1,<0.17.0)",
+    "wordcloud (>=1.9.4,<2.0.0)",
+    "sentence-transformers (>=4.1.0,<5.0.0)",
+    "tensorflow (>=2.11)",
+    "tensorflow-io-gcs-filesystem (==0.31.0)",
+    "opencv-python (>=4.11.0.86,<5.0.0.0)",
+    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)"
 ]
 
 
